# Masters

./: .gitignore  README.md  paraview.sh  working vtk1.txt
ConeExample/src/: CMakeLists.txt  Cone.cxx
ExampleFiles/FromPhysics/: peano-ascii-conserved-0.peano-patch-file  peano-ascii-conserved.peano-patch-file
Paper/: data.ods  durhampaper.sty  projectpaper.aux  projectpaper.bbl  projectpaper.bib  projectpaper.blg  projectpaper.dvi  projectpaper.tex
ParaviewPlugin/src/: PeanoConverter.cpp  PeanoConverter.h  PeanoDataSet.cpp  PeanoDataSet.h  PeanoPatch.cpp  PeanoPatch.h  PeanoPatchData.cpp  PeanoReader.cpp  PeanoReader.h  vtkPeanoReader.cpp  vtkPeanoReader.h  vtkPeanoReader.xml
PeanoPatchReader/: PeanoPatch.cpp  PeanoPatch.h  PeanoPatchData.cpp  PeanoPatchData.h  PeanoPatchReader.cpp  PeanoPatchReader.h  PeanoVTK.cpp  PeanoVariable.h
PeanoSubSampler2/src/: CMakeLists.txt  PeanoConverter.cpp  PeanoConverter.h  PeanoDataSet.cpp  PeanoDataSet.h  PeanoMetaFile.cpp  PeanoMetaFile.h  PeanoPatch.cpp  PeanoReader.cpp  PeanoVTK.cpp
Standalone/src/: CMakeLists.txt  PeanoConverter.cpp  PeanoDataSet.cpp  PeanoDataSet.h  PeanoStandalone.cpp  notes.txt
peanoConverter/src/: CMakeCache.txt  CMakeLists.txt  PeanoConverter.cpp  PeanoConverter.h  PeanoMetaReader.cpp  PeanoPatch.cpp  PeanoPatch.h  PeanoPatchReader.cpp  PeanoPatchReader.h  PeanoReader.cpp  PeanoReader.h  PeanoVTK.cpp  PeanoVariable.cpp
vtkPeanoExplorer/src/: CMakeCache.txt  CMakeLists.txt  vtkPeanoExplorer.cpp  vtkPeanoExplorer.h  vtkPeanoExplorer.xml
vtkPeanoReaderGUI/source/: CMakeLists.txt  PeanoConverter.cpp  PeanoConverter.h  PeanoDataSet.cpp  PeanoMetaFile.cpp  PeanoMetaFile.h  PeanoPatch.cpp  PeanoPatch.h  PeanoReader.h  vtkPeanoReader.cpp  vtkPeanoReader.h  vtkPeanoReader.xml
vtkPlugin/source/: CMakeLists.txt  PeanoConverter.cpp  PeanoConverter.h  PeanoPatch.cpp  PeanoPatch.h  PeanoPatchData.h  vtkPeanoReader.cpp  vtkPeanoReader.h  vtkPeanoReader.xml
vtkSinglePeanoReader/source/: CMakeLists.txt  PeanoMetaReader.h  PeanoPatchData.cpp  vtkPeanoReader.cpp  vtkPeanoReader.h  vtkPeanoReader.xml
vtkTest/src/: CMakeLists.txt  VTKTest.cpp
